@@ -1,3 +1,10 @@
+2016-05-07 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* device/lib/hc08/_setjmp.c,
+	* device/lib/s08/_setjmp.c: svn eol-style native
+	* support/regression/tests/gcc-torture-execute-pr28982a.c,
+	* support/regression/tests/bug-2197.c: enabled for mcs51
+
 2016-05-06 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* support/regression/compact-results.py
